2018-03-27  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-998

	* src/m_radiation_field.cc (doit_i_fieldClearskyPlaneParallel):
	Now also returns transmission data.

2018-03-27  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-997

	* src/m_radiation_field.cc (doit_i_fieldClearskyPlaneParallel):
	New method. Seems to work, but some details should be fixed.

	* src/m_ppath.cc (ppathPlaneParallel): Decreased forbiiden
	za-range to 89.9-90.1.

	* src/m_rte.cc (ppvar_optical_depthFromPpvar_trans_cumulat): New WSM.

	* src/m_fos.cc (iyHybrid):
	* src/m_radiation_field.cc (radiation_fieldCalcFromiyCalc):
	Adopted call of iyEmissionStandard.

	* src/m_cloudradar.cc (iyActiveSingleScat):
	* src/m_fos.cc (iyHybrid):
	* src/m_transmitter.cc (iyTransmissionStandard):
	* src/m_rte.cc (iyEmissionStandard): ppvar_trans_cumulat is now an
	output variable.

	* src/workspace.cc Added ppvar_trans_cumulat and
	ppvar_optical_depth.

2018-03-25 Jana Mendrok  <jana.mendrok@gmail.com>

	* arts-2-3-996

	* src/m_optproperties.cc, methods.cc (TestScatDataInterp):
	Added section testing pha_mat extraction using new unified system.
	Made compare capability better selectable and updated doc. Added diff
	threshold of compare as user parameter.

	* src/optproperties.cc (pha_mat1ScatElem):
	Bugfixes in az-rand branch triggered by TestScatDataInterp.

	* src/optproperties.h (pha_mat_1ScatElem, pha_matNScatElems):
	Added missed default for t_interp_order.

2018-03-24 Jana Mendrok  <jana.mendrok@gmail.com>

	* arts-2-3-995

	* src/optproperties.[cc,h] (pha_matBulk, pha_matScatSpecBulk,
	pha_matNScatElems, pha_mat1ScatElem):
	Implemented suite of new/replacement methods for consistent phamat
	extraction over the scattering solvers.

	(scat_angle, interpolate_scat_angle, pha_matTransform):
	Moved scattering angle calculation out of interpolate_scat_angle into
	separate function for re-usability.
